--- a/style/sass.css
+++ b/style/sass.css
@@ -1472,6 +1472,7 @@ dialog::backdrop {
   }
 }
 .banner_uno .cotenido_banner .cont_videos {
+  background: #fbfeff;
   width: 30%;
   box-shadow: 2px 2px 0px 0px #000;
 }
@@ -1557,7 +1558,7 @@ dialog::backdrop {
   /* 20.4px */
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1260px) {
   .body__home dialog {
     margin: auto;
     border: 1px solid #263238;
@@ -1880,7 +1881,7 @@ dialog::backdrop {
   .inicio__cont__misservicios .misservicios__titulo .misservicios__cont__2 .h33 {
     font-style: normal;
     font-weight: 700;
-    font-size: 30px;
+    font-size: calc(0.1em + 6vw);
     line-height: 136%;
     color: #19232D;
     font-family: "Sora";
@@ -2018,7 +2019,7 @@ dialog::backdrop {
   .banner_uno .banner__titulo .misservicios__cont__2 .h33 {
     font-style: normal;
     font-weight: 700;
-    font-size: 30px;
+    font-size: calc(0.1em + 6vw);
     line-height: 136%;
     color: #19232D;
     font-family: "Sora";
@@ -2039,6 +2040,8 @@ dialog::backdrop {
     position: relative;
   }
   .banner_uno .cotenido_banner .Words ul {
+    font-size: calc(0.1em + 6vw);
+    font-weight: 900;
     margin: 1em 1em 0em 0.5em;
   }
   .banner_uno .cotenido_banner .Words ul li p {
@@ -2126,11 +2129,12 @@ dialog::backdrop {
   .banner_uno .cotenido_banner .cont_videos .video_uno {
     border: 1px solid #263238;
     display: inline-flex;
+    width: 100%;
     height: 100%;
     padding: 2em;
     justify-content: space-between;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: start;
   }
   .banner_uno .cotenido_banner .cont_videos .video_uno .cont_titulo_video {
     display: flex;
@@ -2156,6 +2160,7 @@ dialog::backdrop {
     line-height: 136%;
   }
   .banner_uno .cotenido_banner .cont_videos .video_uno .cont_titulo_video img {
+    width: 100%;
     margin-top: 1em;
     margin-bottom: 1em;
   }
