--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1,5 +1,5 @@
 .body__index {
-    height: 100vh;
+    height: 85vh;
     margin: 3em;
 
     main {
@@ -7,8 +7,84 @@
         border-radius: 10px;
         overflow: hidden;
         width: 100%;
+        height: 100%;
+
+        .boton_portafolio {
+            position: absolute;
+            bottom: -4px;
+            right: -1px;
+            z-index: 0;
+
+            .boton_portafolio_contenedor {
+                position: relative;
+
+                .botonfloat {
+                    position: absolute;
+                    bottom: 30px;
+                    right: 30px;
+                    z-index: 1;
+                    transform: rotate(-55deg);
+                    transition-property: transform;
+                    transition-duration: 0.2s;
+                    transition-delay: 0s;
+                    transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
+                }
+                .botonfloat:hover {
+                    transform: rotate(0deg)
+                }
+
+                .blackfloat {
+                    position: absolute;
+                    bottom: 20px;
+                    right: 20px;
+                    z-index: 0;
+                    animation-name: backfloat;
+                    animation-duration: 10s;
+                    animation-iteration-count: infinite;
+                    animation-timing-function: linear;
+
+                    @keyframes backfloat {
+                        0% {
+                            transform: rotate(0);
+
+                        }
+
+                        100% {
+                            transform: rotate(360deg);
+
+                        }
+                    }
+                }
+            }
+
+        }
+
+        .capa_blur {
+            background: #5353532d;
+            backdrop-filter: blur(30.5px);
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0px;
+            object-fit: cover;
+            z-index: -1;
+            overflow: hidden;
+        }
+
+        video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -10;
+
+        }
 
         .conte__menu {
+
             .header__index {
                 display: flex;
                 margin: 1rem 5rem 1rem 5rem;
@@ -24,7 +100,6 @@
                 .cont__logo__nav {
                     transform: scale(0.9);
                     z-index: 1000;
-                    filter: invert(100%);
                 }
             }
 
@@ -165,56 +240,74 @@
 
         }
 
-        video {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            z-index: -10;
-
-        }
-
+        /* #####################   CONTENIDO ############################# */
         .titulo__index {
             display: flex;
+            padding-left: 5px;
             margin: 1rem 5rem 1rem 5rem;
             flex-direction: column;
+            justify-content: space-between;
+            border-left: 1px solid #FFF;
+            text-shadow: 0px 0px 12px rgba(0, 0, 0, 0.30);
+            height: 80%;
 
-            div {
-                display: flex;
-                flex-direction: row;
-                gap: 10px;
+            .cont_titulo_uno {
+                gap: 3em;
 
-                img {
-                    width: 19px;
-                    height: 19px;
+                div {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 10px;
+
+                    img {
+                        width: 19px;
+                        height: 19px;
+                    }
+
+                    p {
+                        color: #FFF;
+                        font-family: Sora;
+                        font-size: 13px;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 138.5%;
+                        /* 18.005px */
+                        letter-spacing: 0.65px;
+                        text-transform: capitalize;
+                    }
                 }
 
-                p {
+                h1 {
+                    justify-content: center;
                     color: #FFF;
+                    font-family: Sora;
+                    font-size: calc(4em + 1vw);
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 136%;
+
+                    img {
+                        width: 75px;
+                        height: 75px;
+                        flex-shrink: 0;
+                    }
+                }
+            }
+
+            .cont_titulo_dos {
+                padding-left: 5px;
+                margin-right: 50%;
+
+                p {
+                    color: #FDFDFF;
                     font-family: Sora;
                     font-size: 13px;
                     font-style: normal;
-                    font-weight: 400;
+                    font-weight: 300;
                     line-height: 138.5%;
                     /* 18.005px */
                     letter-spacing: 0.65px;
                     text-transform: capitalize;
-                }
-            }
-
-            h1 {
-                color: #FFF;
-                font-family: Sora;
-                font-size: 96px;
-                font-style: normal;
-                font-weight: 700;
-                line-height: 136%;
-                img {
-                    width: 69px;
-                    height: 69px;
-                    flex-shrink: 0;
                 }
             }
 
@@ -225,5 +318,329 @@
 
 }
 
-
-/* #####################   HOME ############################# */
+@media (max-width: 1000px){
+    .body__index {
+        height: 90vh;
+        margin: 1em;
+        .cursor{
+            display: none;
+        }
+    
+        main {
+            position: relative;
+            border-radius: 10px;
+            overflow: hidden;
+            width: 100%;
+            height: 100%;
+    
+            .boton_portafolio {
+                position: absolute;
+                bottom: -4px;
+                right: -1px;
+                z-index: 0;
+    
+                .boton_portafolio_contenedor {
+                    position: relative;
+    
+                    .botonfloat {
+                        position: absolute;
+                        bottom: 30px;
+                        right: 30px;
+                        z-index: 1;
+                        transform: rotate(-55deg);
+                        transition-property: transform;
+                        transition-duration: 0.2s;
+                        transition-delay: 0s;
+                        transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
+                    }
+                    .botonfloat:hover {
+                        transform: rotate(0deg)
+                    }
+    
+                    .blackfloat {
+                        position: absolute;
+                        bottom: 20px;
+                        right: 20px;
+                        z-index: 0;
+                        animation-name: backfloat;
+                        animation-duration: 10s;
+                        animation-iteration-count: infinite;
+                        animation-timing-function: linear;
+    
+                        @keyframes backfloat {
+                            0% {
+                                transform: rotate(0);
+    
+                            }
+    
+                            100% {
+                                transform: rotate(360deg);
+    
+                            }
+                        }
+                    }
+                }
+    
+            }
+    
+            .capa_blur {
+                background: #5353532d;
+                backdrop-filter: blur(30.5px);
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0px;
+                object-fit: cover;
+                z-index: -1;
+                overflow: hidden;
+            }
+    
+            video {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                z-index: -10;
+    
+            }
+    
+            .conte__menu {
+    
+                .header__index {
+                    display: flex;
+                    margin: 1rem 1rem 2rem 1rem;
+                    justify-content: space-between;
+                    align-items: center;
+    
+                    .icono-menu {
+                        transform: scale(0.9);
+                        z-index: 1000;
+    
+                    }
+    
+                    .cont__logo__nav {
+                        transform: scale(0.9);
+                        z-index: 1000;
+                    }
+                }
+    
+                .cont-menu-nuevo {
+                    z-index: 20;
+                    background: #ffffff;
+                    box-shadow: -40vw 0vh rgba(0, 0, 0, 0.377);
+                    width: 60vw;
+                    height: 100%;
+                    position: fixed;
+                    top: 0;
+                    right: 0;
+                    transition: all .5s ease-in-out;
+                    border-left: 1px solid #19232D;
+    
+    
+                    .cont__logo__menu {
+                        height: 5.2em;
+                        border-bottom: 1px solid #19232D;
+                    }
+    
+                    ul {
+                        display: flex;
+                        flex-direction: row;
+    
+                        .lista_social {
+                            padding: 2em 5em 0px 5em;
+                            display: flex;
+                            flex-direction: column;
+                            align-items: flex-start;
+                            gap: 25px;
+    
+                            p {
+                                color: #979797;
+                                font-family: Sora;
+                                font-size: 18px;
+                                font-style: normal;
+                                font-weight: 250;
+                                line-height: 107.5%;
+                                padding-bottom: 0.5em;
+                            }
+    
+                            li {
+                                list-style: none;
+    
+                                a {
+                                    color: #000000;
+                                    font-family: Sora;
+                                    font-size: 18px;
+                                    font-style: normal;
+                                    font-weight: 200;
+                                    line-height: 107.5%;
+                                }
+                            }
+                        }
+    
+                        .lista_menu {
+                            padding: 2em 4em 2em 4em;
+                            display: flex;
+                            flex-direction: column;
+                            align-items: flex-start;
+                            gap: 20px;
+                            border-left: 1px solid #19232D;
+    
+                            p {
+                                color: #979797;
+                                font-family: Sora;
+                                font-size: 18px;
+                                font-style: normal;
+                                font-weight: 250;
+                                line-height: 107.5%;
+                                padding-bottom: 0.5em;
+    
+                            }
+    
+                            li {
+                                list-style: none;
+    
+                                a {
+                                    color: #000;
+                                    font-family: Sora;
+                                    font-size: 35px;
+                                    font-style: normal;
+                                    font-weight: 200;
+                                    line-height: 107.5%;
+                                }
+                            }
+                        }
+    
+    
+                    }
+    
+                    .poner_contacto {
+                        padding: 1em 5em 0px 5em;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: flex-start;
+                        gap: 5px;
+                        border-top: 1px solid #19232D;
+    
+    
+                        p {
+                            color: #979797;
+                            font-family: Sora;
+                            font-size: 18px;
+                            font-style: normal;
+                            font-weight: 250;
+                            line-height: 107.5%;
+                            padding-bottom: 1em;
+                        }
+    
+                        .correo_contacto {
+                            color: #000;
+                            font-family: Sora;
+                            font-size: 15px;
+                            font-style: normal;
+                            font-weight: 600;
+                            display: flex;
+                            padding: 0px 0px 6px 0px;
+                            align-items: center;
+    
+    
+                        }
+    
+                    }
+    
+    
+    
+                }
+    
+                .active {
+                    border-radius: 1000px 0px 0px 1000px;
+                    transform: translate(90vw);
+                    visibility: hidden;
+                    position: fixed;
+                    background: #ffffff;
+                }
+    
+            }
+    
+            /* #####################   CONTENIDO ############################# */
+            .titulo__index {
+                display: flex;
+                padding-left: 5px;
+                margin: 1rem 1rem 1rem 1rem;
+                flex-direction: column;
+                justify-content: space-between;
+                border-left: 1px solid #FFF;
+                text-shadow: 0px 0px 12px rgba(0, 0, 0, 0.30);
+                height: 85%;
+    
+                .cont_titulo_uno {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 3em;
+    
+                    div {
+                        display: flex;
+                        flex-direction: row;
+                        gap: 10px;
+    
+                        img {
+                            width: 19px;
+                            height: 19px;
+                        }
+    
+                        p {
+                            color: #FFF;
+                            font-family: Sora;
+                            font-size:calc(0.5em + 1vw);
+                            font-style: normal;
+                            font-weight: 400;
+                            line-height: 138.5%;
+                            /* 18.005px */
+                            letter-spacing: 0.65px;
+                            text-transform: capitalize;
+                        }
+                    }
+    
+                    h1 {
+                        justify-content: center;
+                        color: #FFF;
+                        font-family: Sora;
+                        font-size:calc(1.5em + 4vw);
+                        font-style: normal;
+                        font-weight: 700;
+                        line-height: 136%;
+    
+                        img {
+                            width: 50px;
+                            height: 50px;
+                            flex-shrink: 0;
+                        }
+                    }
+                }
+    
+                .cont_titulo_dos {
+                    padding-left: 5px;
+                    margin-right: 40%;
+    
+                    p {
+                        color: #FDFDFF;
+                        font-family: Sora;
+                        font-size: 13px;
+                        font-style: normal;
+                        font-weight: 300;
+                        line-height: 138.5%;
+                        /* 18.005px */
+                        letter-spacing: 0.65px;
+                        text-transform: capitalize;
+                    }
+                }
+    
+    
+            }
+    
+        }
+    
+    }
+}
