--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -393,11 +393,11 @@ body::-webkit-scrollbar-thumb {
     margin-left: -40px;
     margin-top: -40px;
     border-radius: 50%;
-    border: 0.5px solid #9b9b9b;
+    border: 0.5px solid #ffffff;
     transition: transform .3s ease;
     transform-origin: center center;
     pointer-events: none;
-    z-index: 1000;
+    z-index:9999;
 }
 
 p {
