--- a/style/sass.css
+++ b/style/sass.css
@@ -332,11 +332,11 @@ body::-webkit-scrollbar-thumb {
   margin-left: -40px;
   margin-top: -40px;
   border-radius: 50%;
-  border: 0.5px solid #9b9b9b;
+  border: 0.5px solid #ffffff;
   transition: transform 0.3s ease;
   transform-origin: center center;
   pointer-events: none;
-  z-index: 1000;
+  z-index: 9999;
 }
 
 p {
@@ -4057,7 +4057,7 @@ body {
   }
 }
 .body__index {
-  height: 100vh;
+  height: 85vh;
   margin: 3em;
 }
 .body__index main {
@@ -4065,6 +4065,73 @@ body {
   border-radius: 10px;
   overflow: hidden;
   width: 100%;
+  height: 100%;
+  /* #####################   CONTENIDO ############################# */
+}
+.body__index main .boton_portafolio {
+  position: absolute;
+  bottom: -4px;
+  right: -1px;
+  z-index: 0;
+}
+.body__index main .boton_portafolio .boton_portafolio_contenedor {
+  position: relative;
+}
+.body__index main .boton_portafolio .boton_portafolio_contenedor .botonfloat {
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+  z-index: 1;
+  transform: rotate(-55deg);
+  transition-property: transform;
+  transition-duration: 0.2s;
+  transition-delay: 0s;
+  transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
+}
+.body__index main .boton_portafolio .boton_portafolio_contenedor .botonfloat:hover {
+  transform: rotate(0deg);
+}
+.body__index main .boton_portafolio .boton_portafolio_contenedor .blackfloat {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  z-index: 0;
+  animation-name: backfloat;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+@keyframes backfloat {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.body__index main .capa_blur {
+  background: rgba(83, 83, 83, 0.1764705882);
+  -webkit-backdrop-filter: blur(30.5px);
+          backdrop-filter: blur(30.5px);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: -1;
+  overflow: hidden;
+}
+.body__index main video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: -10;
 }
 .body__index main .conte__menu .header__index {
   display: flex;
@@ -4079,7 +4146,6 @@ body {
 .body__index main .conte__menu .header__index .cont__logo__nav {
   transform: scale(0.9);
   z-index: 1000;
-  filter: invert(100%);
 }
 .body__index main .conte__menu .cont-menu-nuevo {
   z-index: 20;
@@ -4190,31 +4256,29 @@ body {
   position: fixed;
   background: #ffffff;
 }
-.body__index main video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  z-index: -10;
-}
 .body__index main .titulo__index {
   display: flex;
+  padding-left: 5px;
   margin: 1rem 5rem 1rem 5rem;
   flex-direction: column;
+  justify-content: space-between;
+  border-left: 1px solid #FFF;
+  text-shadow: 0px 0px 12px rgba(0, 0, 0, 0.3);
+  height: 80%;
 }
-.body__index main .titulo__index div {
+.body__index main .titulo__index .cont_titulo_uno {
+  gap: 3em;
+}
+.body__index main .titulo__index .cont_titulo_uno div {
   display: flex;
   flex-direction: row;
   gap: 10px;
 }
-.body__index main .titulo__index div img {
+.body__index main .titulo__index .cont_titulo_uno div img {
   width: 19px;
   height: 19px;
 }
-.body__index main .titulo__index div p {
+.body__index main .titulo__index .cont_titulo_uno div p {
   color: #FFF;
   font-family: Sora;
   font-size: 13px;
@@ -4225,21 +4289,305 @@ body {
   letter-spacing: 0.65px;
   text-transform: capitalize;
 }
-.body__index main .titulo__index h1 {
+.body__index main .titulo__index .cont_titulo_uno h1 {
+  justify-content: center;
   color: #FFF;
   font-family: Sora;
-  font-size: 96px;
+  font-size: calc(4em + 1vw);
   font-style: normal;
   font-weight: 700;
   line-height: 136%;
 }
-.body__index main .titulo__index h1 img {
-  width: 69px;
-  height: 69px;
+.body__index main .titulo__index .cont_titulo_uno h1 img {
+  width: 75px;
+  height: 75px;
   flex-shrink: 0;
 }
+.body__index main .titulo__index .cont_titulo_dos {
+  padding-left: 5px;
+  margin-right: 50%;
+}
+.body__index main .titulo__index .cont_titulo_dos p {
+  color: #FDFDFF;
+  font-family: Sora;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 138.5%;
+  /* 18.005px */
+  letter-spacing: 0.65px;
+  text-transform: capitalize;
+}
 
-/* #####################   HOME ############################# */
+@media (max-width: 1000px) {
+  .body__index {
+    height: 90vh;
+    margin: 1em;
+  }
+  .body__index .cursor {
+    display: none;
+  }
+  .body__index main {
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    /* #####################   CONTENIDO ############################# */
+  }
+  .body__index main .boton_portafolio {
+    position: absolute;
+    bottom: -4px;
+    right: -1px;
+    z-index: 0;
+  }
+  .body__index main .boton_portafolio .boton_portafolio_contenedor {
+    position: relative;
+  }
+  .body__index main .boton_portafolio .boton_portafolio_contenedor .botonfloat {
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+    z-index: 1;
+    transform: rotate(-55deg);
+    transition-property: transform;
+    transition-duration: 0.2s;
+    transition-delay: 0s;
+    transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
+  }
+  .body__index main .boton_portafolio .boton_portafolio_contenedor .botonfloat:hover {
+    transform: rotate(0deg);
+  }
+  .body__index main .boton_portafolio .boton_portafolio_contenedor .blackfloat {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    z-index: 0;
+    animation-name: backfloat;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+  @keyframes backfloat {
+    0% {
+      transform: rotate(0);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  .body__index main .capa_blur {
+    background: rgba(83, 83, 83, 0.1764705882);
+    -webkit-backdrop-filter: blur(30.5px);
+            backdrop-filter: blur(30.5px);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    z-index: -1;
+    overflow: hidden;
+  }
+  .body__index main video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    z-index: -10;
+  }
+  .body__index main .conte__menu .header__index {
+    display: flex;
+    margin: 1rem 1rem 2rem 1rem;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .body__index main .conte__menu .header__index .icono-menu {
+    transform: scale(0.9);
+    z-index: 1000;
+  }
+  .body__index main .conte__menu .header__index .cont__logo__nav {
+    transform: scale(0.9);
+    z-index: 1000;
+  }
+  .body__index main .conte__menu .cont-menu-nuevo {
+    z-index: 20;
+    background: #ffffff;
+    box-shadow: -40vw 0vh rgba(0, 0, 0, 0.377);
+    width: 60vw;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    transition: all 0.5s ease-in-out;
+    border-left: 1px solid #19232D;
+  }
+  .body__index main .conte__menu .cont-menu-nuevo .cont__logo__menu {
+    height: 5.2em;
+    border-bottom: 1px solid #19232D;
+  }
+  .body__index main .conte__menu .cont-menu-nuevo ul {
+    display: flex;
+    flex-direction: row;
+  }
+  .body__index main .conte__menu .cont-menu-nuevo ul .lista_social {
+    padding: 2em 5em 0px 5em;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 25px;
+  }
+  .body__index main .conte__menu .cont-menu-nuevo ul .lista_social p {
+    color: #979797;
+    font-family: Sora;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 250;
+    line-height: 107.5%;
+    padding-bottom: 0.5em;
+  }
+  .body__index main .conte__menu .cont-menu-nuevo ul .lista_social li {
+    list-style: none;
+  }
+  .body__index main .conte__menu .cont-menu-nuevo ul .lista_social li a {
+    color: #000000;
+    font-family: Sora;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 200;
+    line-height: 107.5%;
+  }
+  .body__index main .conte__menu .cont-menu-nuevo ul .lista_menu {
+    padding: 2em 4em 2em 4em;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    border-left: 1px solid #19232D;
+  }
+  .body__index main .conte__menu .cont-menu-nuevo ul .lista_menu p {
+    color: #979797;
+    font-family: Sora;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 250;
+    line-height: 107.5%;
+    padding-bottom: 0.5em;
+  }
+  .body__index main .conte__menu .cont-menu-nuevo ul .lista_menu li {
+    list-style: none;
+  }
+  .body__index main .conte__menu .cont-menu-nuevo ul .lista_menu li a {
+    color: #000;
+    font-family: Sora;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 200;
+    line-height: 107.5%;
+  }
+  .body__index main .conte__menu .cont-menu-nuevo .poner_contacto {
+    padding: 1em 5em 0px 5em;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
+    border-top: 1px solid #19232D;
+  }
+  .body__index main .conte__menu .cont-menu-nuevo .poner_contacto p {
+    color: #979797;
+    font-family: Sora;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 250;
+    line-height: 107.5%;
+    padding-bottom: 1em;
+  }
+  .body__index main .conte__menu .cont-menu-nuevo .poner_contacto .correo_contacto {
+    color: #000;
+    font-family: Sora;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 600;
+    display: flex;
+    padding: 0px 0px 6px 0px;
+    align-items: center;
+  }
+  .body__index main .conte__menu .active {
+    border-radius: 1000px 0px 0px 1000px;
+    transform: translate(90vw);
+    visibility: hidden;
+    position: fixed;
+    background: #ffffff;
+  }
+  .body__index main .titulo__index {
+    display: flex;
+    padding-left: 5px;
+    margin: 1rem 1rem 1rem 1rem;
+    flex-direction: column;
+    justify-content: space-between;
+    border-left: 1px solid #FFF;
+    text-shadow: 0px 0px 12px rgba(0, 0, 0, 0.3);
+    height: 85%;
+  }
+  .body__index main .titulo__index .cont_titulo_uno {
+    display: flex;
+    flex-direction: column;
+    gap: 3em;
+  }
+  .body__index main .titulo__index .cont_titulo_uno div {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+  }
+  .body__index main .titulo__index .cont_titulo_uno div img {
+    width: 19px;
+    height: 19px;
+  }
+  .body__index main .titulo__index .cont_titulo_uno div p {
+    color: #FFF;
+    font-family: Sora;
+    font-size: calc(0.5em + 1vw);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 138.5%;
+    /* 18.005px */
+    letter-spacing: 0.65px;
+    text-transform: capitalize;
+  }
+  .body__index main .titulo__index .cont_titulo_uno h1 {
+    justify-content: center;
+    color: #FFF;
+    font-family: Sora;
+    font-size: calc(1.5em + 4vw);
+    font-style: normal;
+    font-weight: 700;
+    line-height: 136%;
+  }
+  .body__index main .titulo__index .cont_titulo_uno h1 img {
+    width: 50px;
+    height: 50px;
+    flex-shrink: 0;
+  }
+  .body__index main .titulo__index .cont_titulo_dos {
+    padding-left: 5px;
+    margin-right: 40%;
+  }
+  .body__index main .titulo__index .cont_titulo_dos p {
+    color: #FDFDFF;
+    font-family: Sora;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 138.5%;
+    /* 18.005px */
+    letter-spacing: 0.65px;
+    text-transform: capitalize;
+  }
+}
 .cont-cabezera_home {
   display: flex;
   flex-direction: column;
