--- a/style/sass.css
+++ b/style/sass.css
@@ -4057,8 +4057,8 @@ body {
   }
 }
 .body__index {
-  height: 85vh;
-  margin: 3em;
+  height: 100vh;
+  padding: 2em;
 }
 .body__index main {
   position: relative;
@@ -4079,8 +4079,8 @@ body {
 }
 .body__index main .boton_portafolio .boton_portafolio_contenedor .botonfloat {
   position: absolute;
-  bottom: 30px;
-  right: 30px;
+  bottom: 15px;
+  right: 15px;
   z-index: 1;
   transform: rotate(-55deg);
   transition-property: transform;
@@ -4093,8 +4093,8 @@ body {
 }
 .body__index main .boton_portafolio .boton_portafolio_contenedor .blackfloat {
   position: absolute;
-  bottom: 20px;
-  right: 20px;
+  bottom: 5px;
+  right: 5px;
   z-index: 0;
   animation-name: backfloat;
   animation-duration: 10s;
@@ -4261,24 +4261,26 @@ body {
   padding-left: 5px;
   margin: 1rem 5rem 1rem 5rem;
   flex-direction: column;
+  gap: 5em;
   justify-content: space-between;
   border-left: 1px solid #FFF;
   text-shadow: 0px 0px 12px rgba(0, 0, 0, 0.3);
-  height: 80%;
 }
 .body__index main .titulo__index .cont_titulo_uno {
-  gap: 3em;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
 }
-.body__index main .titulo__index .cont_titulo_uno div {
+.body__index main .titulo__index .cont_titulo_uno .sub_titulo {
   display: flex;
   flex-direction: row;
   gap: 10px;
 }
-.body__index main .titulo__index .cont_titulo_uno div img {
+.body__index main .titulo__index .cont_titulo_uno .sub_titulo img {
   width: 19px;
   height: 19px;
 }
-.body__index main .titulo__index .cont_titulo_uno div p {
+.body__index main .titulo__index .cont_titulo_uno .sub_titulo p {
   color: #FFF;
   font-family: Sora;
   font-size: 13px;
@@ -4289,19 +4291,48 @@ body {
   letter-spacing: 0.65px;
   text-transform: capitalize;
 }
-.body__index main .titulo__index .cont_titulo_uno h1 {
+.body__index main .titulo__index .cont_titulo_uno .titulo {
   justify-content: center;
   color: #FFF;
   font-family: Sora;
-  font-size: calc(4em + 1vw);
+  font-size: calc(3em + 1vw);
   font-style: normal;
   font-weight: 700;
   line-height: 136%;
 }
-.body__index main .titulo__index .cont_titulo_uno h1 img {
+.body__index main .titulo__index .cont_titulo_uno .titulo img {
   width: 75px;
   height: 75px;
   flex-shrink: 0;
+}
+.body__index main .titulo__index .cont_titulo_uno .contens_chips {
+  display: flex;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+  grid-auto-rows: 2rem;
+  grid-template-columns: repeat(auto-fill, minmax(min(100%, 15rem), 1fr));
+}
+.body__index main .titulo__index .cont_titulo_uno .contens_chips .chips {
+  background: rgba(255, 255, 255, 0.11);
+  display: flex;
+  padding: 5px 10px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 2px;
+  border: 0.5px solid #ffffff;
+}
+.body__index main .titulo__index .cont_titulo_uno .contens_chips .chips p {
+  color: #FDFDFF;
+  text-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25), 0px 0px 12px rgba(0, 0, 0, 0.25);
+  font-family: Sora;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 138.5%;
+  /* 18.005px */
+  letter-spacing: 0.65px;
+  text-transform: capitalize;
 }
 .body__index main .titulo__index .cont_titulo_dos {
   padding-left: 5px;
@@ -4321,8 +4352,8 @@ body {
 
 @media (max-width: 1000px) {
   .body__index {
-    height: 90vh;
-    margin: 1em;
+    height: 100vh;
+    padding: 1em;
   }
   .body__index .cursor {
     display: none;
@@ -4343,11 +4374,12 @@ body {
   }
   .body__index main .boton_portafolio .boton_portafolio_contenedor {
     position: relative;
+    transform: scale(0.9);
   }
   .body__index main .boton_portafolio .boton_portafolio_contenedor .botonfloat {
     position: absolute;
-    bottom: 30px;
-    right: 30px;
+    bottom: 25px;
+    right: 15px;
     z-index: 1;
     transform: rotate(-55deg);
     transition-property: transform;
@@ -4360,8 +4392,8 @@ body {
   }
   .body__index main .boton_portafolio .boton_portafolio_contenedor .blackfloat {
     position: absolute;
-    bottom: 20px;
-    right: 20px;
+    bottom: 15px;
+    right: 5px;
     z-index: 0;
     animation-name: backfloat;
     animation-duration: 10s;
@@ -4531,23 +4563,23 @@ body {
     justify-content: space-between;
     border-left: 1px solid #FFF;
     text-shadow: 0px 0px 12px rgba(0, 0, 0, 0.3);
-    height: 85%;
   }
   .body__index main .titulo__index .cont_titulo_uno {
     display: flex;
     flex-direction: column;
-    gap: 3em;
+    justify-content: space-between;
   }
-  .body__index main .titulo__index .cont_titulo_uno div {
+  .body__index main .titulo__index .cont_titulo_uno .sub_titulo {
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    gap: 1px;
+    text-align: start;
   }
-  .body__index main .titulo__index .cont_titulo_uno div img {
+  .body__index main .titulo__index .cont_titulo_uno .sub_titulo img {
     width: 19px;
     height: 19px;
   }
-  .body__index main .titulo__index .cont_titulo_uno div p {
+  .body__index main .titulo__index .cont_titulo_uno .sub_titulo p {
     color: #FFF;
     font-family: Sora;
     font-size: calc(0.5em + 1vw);
@@ -4558,25 +4590,56 @@ body {
     letter-spacing: 0.65px;
     text-transform: capitalize;
   }
-  .body__index main .titulo__index .cont_titulo_uno h1 {
+  .body__index main .titulo__index .cont_titulo_uno .titulo {
+    text-align: start;
     justify-content: center;
     color: #FFF;
     font-family: Sora;
-    font-size: calc(1.5em + 4vw);
+    font-size: calc(1.5em + 1vw);
     font-style: normal;
     font-weight: 700;
     line-height: 136%;
   }
-  .body__index main .titulo__index .cont_titulo_uno h1 img {
-    width: 50px;
-    height: 50px;
+  .body__index main .titulo__index .cont_titulo_uno .titulo img {
+    padding-top: 0px;
+    width: 40px;
+    height: 40px;
     flex-shrink: 0;
+  }
+  .body__index main .titulo__index .cont_titulo_uno .contens_chips {
+    display: grid;
+    row-gap: 10px;
+    grid-auto-rows: 1.5rem;
+    grid-auto-columns: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(min(100%, 7rem), 1fr));
+  }
+  .body__index main .titulo__index .cont_titulo_uno .contens_chips .chips {
+    display: flex;
+    padding: 5px 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 2px;
+    border: 0.5px solid #ffffff;
+  }
+  .body__index main .titulo__index .cont_titulo_uno .contens_chips .chips p {
+    color: #FDFDFF;
+    text-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25), 0px 0px 12px rgba(0, 0, 0, 0.25);
+    font-family: Sora;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 138.5%;
+    /* 18.005px */
+    letter-spacing: 0.65px;
+    text-transform: capitalize;
   }
   .body__index main .titulo__index .cont_titulo_dos {
     padding-left: 5px;
-    margin-right: 40%;
+    margin-right: 0%;
   }
   .body__index main .titulo__index .cont_titulo_dos p {
+    text-align: start;
     color: #FDFDFF;
     font-family: Sora;
     font-size: 13px;
