--- a/style/sass.css
+++ b/style/sass.css
@@ -4,7 +4,8 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  cursor: url("../assets/img/cursor.svg") 12 12, auto;
+  cursor: url("../assets/img/cursor.svg") 10 10, auto;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 a {
@@ -333,7 +334,7 @@ body::-webkit-scrollbar-thumb {
   margin-top: -40px;
   border-radius: 50%;
   border: 0.5px solid #ffffff;
-  transition: transform 0.3s ease;
+  transition: transform 0.1s ease;
   transform-origin: center center;
   pointer-events: none;
   z-index: 9999;
@@ -4086,7 +4087,6 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(4);
-  cursor: pointer;
 }
 .body__index main .conte__menu .header__index .icono-menu .bars__menu span {
   display: block;
@@ -4095,7 +4095,7 @@ body {
   background: #ffffff;
   margin-top: 2px;
   transform-origin: 0px 100%;
-  transition: all 300ms;
+  transition: all 800ms;
   transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
 }
 .body__index main .conte__menu .header__index .icono-menu .activeline1__bars-menu {
@@ -4107,17 +4107,28 @@ body {
   transform: scale(2);
 }
 .body__index main .conte__menu .header__index .icono-menu .activeline3__bars-menu {
-  transform: rotate(-45deg) translate(0px, 1px);
+  transform: rotate(-45deg) translate(0.8px, 1px);
 }
 .body__index main .conte__menu .header__index .cont__logo__nav {
   transform: scale(0.9);
   z-index: 1000;
 }
 .body__index main .conte__menu .contendor_activo_de_menu {
-  visibility: hidden;
-  left: 0px;
+  right: 0px;
   top: 0px;
   width: 0vw;
+  height: 100vh;
+  position: absolute;
+  z-index: 9;
+  background: #FFF;
+  transform-origin: 0px 100%;
+  transition: all 800ms;
+  transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
+}
+.body__index main .conte__menu .contendor_activo_de_menu_op {
+  right: 0px;
+  top: 0px;
+  width: 100vw;
   height: 100vh;
   position: absolute;
   z-index: 9;
