--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -27,7 +27,6 @@
                         top: 50%;
                         left: 50%;
                         transform: translate(-50%, -50%) scale(4);
-                        cursor: pointer;
                         span {
                             display: block;
                             width: 100%;
@@ -35,7 +34,7 @@
                             background: #ffffff;
                             margin-top: 2px;
                             transform-origin: 0px 100%;
-                            transition: all 300ms;
+                            transition: all 800ms;
                             transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
                         }
                     }
@@ -52,7 +51,7 @@
                     }
                     
                     .activeline3__bars-menu{
-                        transform: rotate(-45deg) translate( 0px, 1px);
+                        transform: rotate(-45deg) translate( 0.8px, 1px);
 
                     }
 
@@ -65,10 +64,23 @@
                 
             }
             .contendor_activo_de_menu{
-                visibility: hidden;
-                left: 0px;
+                right: 0px;
                 top: 0px;
                 width: 0vw;
+                height: 100vh;
+                position:absolute;
+                z-index: 9;
+                background: #FFF;
+                transform-origin: 0px 100%;
+                transition: all 800ms;
+                transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
+            }
+
+            .contendor_activo_de_menu_op{
+                
+                right: 0px;
+                top: 0px;
+                width: 100vw;
                 height: 100vh;
                 position:absolute;
                 z-index: 9;
